--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goit-neo-react-hw-module1 by Alexander Andersen",
+  "name": "goit-neo-react-hw-module1",
   "version": "1.0.0",
   "private": true,
   "scripts": {
